# statistical-arbitrage-pairs-trading

./: .gitignore  README.md  pyproject.toml
data/raw/: events.csv
notebooks/: exploratory_research.ipynb
reports/: README.md
reports/figures/: README.md
src/stat_arb_pairs/: __init__.py  cli.py  data.py  events.py  metrics.py  pairs.py
src/stat_arb_research/: __init__.py  cli.py  data.py  events.py  figures.py  metrics.py  pairs.py
tests/: test_events.py  test_metrics.py  test_pairs.py
