[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stat-arb-pairs-trading"
version = "0.1.0"
description = "Research-grade pairs trading and event-driven backtests on anonymized equity return data."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Saam Nazempour" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "jupyter>=1.0",
]

[project.scripts]
stat-arb-backtest = "stat_arb_pairs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

