[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stat-arb-research"
version = "0.1.0"
description = "Research repo for pairs trading and event-study backtests on anonymized equity data."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Saam Nazempour" }]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
stat-arb-research = "stat_arb_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    "notebooks",
    "*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
